@@ -1,0 +1,2 @@
+print "line 1"
+print "line 2"
